@@ -21,7 +21,6 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -81,7 +80,7 @@ public class TeamServiceImpl implements TeamService {
         List<UserTeam> userTeams = userTeamRepository.findAllByTeamId(team);
         List<UserTeamResponse> userTeamResponses = userTeams.stream()
                 .map(UserTeamResponse::of)
-                .collect(Collectors.toList());
+                .toList();
 
         // 3. Team 정보와 UserTeam(팀 멤버) 정보 담은 Response 객체 반환
         return TeamResponse.of(team, userTeamResponses);
@@ -138,7 +137,6 @@ public class TeamServiceImpl implements TeamService {
      * 팀 스페이스 탈퇴
      *
      * @param teamLeaveRequest 팀 탈퇴에 필요한 정보 포함한 요청 객체
-     * @return void
      * @throws CustomException MEMBER_NOT_FOUND 사용자가 존재하지 않을 경우
      *                         TEAM_NOT_FOUND   팀이 존재하지 않을 경우
      *                         USER_TEAM_NOT_FOUND 팀 유저(멤버)가 존재하지 않을 경우
@@ -199,22 +197,35 @@ public class TeamServiceImpl implements TeamService {
                         return MyTeamResponse.of(team, userTeam.getRole());
                     })
                     .sorted(Comparator.comparing(MyTeamResponse::getCreatedAt).reversed())
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             return Collections.emptyList();
         }
     }
 
+    /**
+     * 팀 스페이스 삭제 private method
+     *
+     * @param team 삭제하고자 하는 team 객체
+     * */
     void deleteTeam(Team team) {
 
         // 1. 탈퇴한 팀 유저(멤버) 모두 삭제
         List<UserTeam> userTeamsToDelete = userTeamRepository.findAllByTeamId(team);
-        userTeamsToDelete.forEach(userTeamRepository::delete);
+        userTeamRepository.deleteAll(userTeamsToDelete);
 
         // 2. 팀 삭제
         teamRepository.delete(team);
     }
 
+    /**
+     * 팀 관리자(OWNER) 권한 재할당 private method
+     * : 팀 스페이스 OWNER 가 팀 스페이스를 탈퇴할 경우,
+     *   팀 스페이스 MEMBER 중 가장 먼저 팀에 참가한 MEMBER 를 OWNER 로 할당
+     *
+     * @param team,userTeam team 객체 / 탈퇴하는 OWNER userTeam 객체
+     * @throws CustomException NO_MEMBERS_AVAILABLE 권한을 할당할 적절한 멤버가 존재하지 않을 경우
+     * */
     void reassignOwnerRole(Team team, UserTeam userTeam) {
         // 탈퇴하는 userTeam의 권한을 MEMBER로 변경
         userTeam.updateRole(Role.MEMBER);
